# MP4Parser

./: CMakeLists.txt  FileReader.cpp  FileReader.h  Fourcc.h  README.md  main.cpp
