cmake_minimum_required (VERSION 3.8)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
project(mp4Parser)

if(APPLE)
  if(IOS)
    set(PLATFORM_SUB_DIR ios)
    message("-- Current target: iOS")
  else()
    set(PLATFORM_SUB_DIR mac)
    message("-- Current target: MacOS")
  endif()
elseif(ANDROID)
  set(PLATFORM_SUB_DIR and)
  message("-- Current target: Android")
else()
  set(PLATFORM_SUB_DIR win)
  message("-- Current target: Windows")
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/cmake/)

if (WIN32 OR APPLE)
    add_executable(mp4Parser main.cpp)
endif()
